--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,7 @@
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 210, 105, 30;
+  --card-rgb2:110, 105, 30;
   --card-border-rgb: 131, 134, 135;
 }
 
