--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -126,6 +126,19 @@
   }
 }
 
+/* LO MISMO PARA CARD CENTER Enable hover only on non-touch devices */
+@media (hover: hover) and (pointer: fine) {
+  .card_Center:hover {
+    background: rgba(var(--card-rgb2), 0.1);
+    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+  }
+
+  .card_Center:hover span {
+    transform: translateX(4px);
+  }
+}
+
+
 @media (prefers-reduced-motion) {
   .card:hover span {
     transform: none;
@@ -282,17 +295,6 @@
   background-color:rgb(151, 182, 193);
 }
 
-.circleNumber {
-  width: 46px; /* Diámetro del círculo */
-  border-radius: 50%;
-  background-color: orange; /* Color del círculo */
-  color: white; /* Color del texto */
-  text-align: center;
-  line-height: 46px; /* Alineación vertical del texto en el círculo */
-  margin: 0; /* Elimina el margen predeterminado */
-}
-
-
 .card_Center {
   display: flex;
   flex-direction: column; 
@@ -320,18 +322,4 @@
   font-size: 0.9rem;
   line-height: 1.5;
   max-width: 30ch;
-}
-
-.card_Center h1h {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  width: 46px; 
-  height: 46px;
-  border-radius: 50%;
-  background-color: orange; /* Color del círculo */
-  color: white; /* Color del texto */
-  text-align: center;
-  line-height: 16px; /* Alineación vertical del texto en el círculo */
- 
 }
