Cambios en el tamaño del Nombre del Autor

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -34,7 +34,7 @@
   background-color: rgba(var(--callout-rgb), 0.5);
   border: 1px solid rgba(var(--callout-border-rgb), 0.4);
   border-radius: var(--border-radius);
-  font-size: xx-large;
+  font-size: x-large;
     
 }
 
