--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -256,6 +256,10 @@
   .logo {
     filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
   }
+
+  .ColorInvertido {
+    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff);
+  }
 }
 
 @keyframes rotate {
@@ -332,8 +336,3 @@
   color: #000000; /* Color por defecto para el tema claro */
 }
 
-@media (prefers-color-scheme: dark) {
-  .ColorInvertido {
-    color: #ffffff; /* Color invertido para el tema oscuro */
-  }
-}
